<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/inputBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/main_hint_bill"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_calcular"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/inputBill"
        android:layout_toRightOf="@+id/inputBill"/>

    <EditText
        android:id="@+id/inputPercentaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:hint="@string/main_hint_percentaje"
        android:ems="10"
        android:layout_alignBottom="@+id/btnIncrease"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@id/btnIncrease"/>

    <Button
        android:id="@+id/btnIncrease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_increase"
        style="?android:buttonStyleSmall"
        android:layout_below="@+id/btnCalcular"
        android:layout_alignLeft="@+id/btnCalcular"
        android:layout_alignStart="@id/btnCalcular"/>

    <Button
        android:id="@+id/btnDecrease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_decrease"
        style="?android:buttonStyleSmall"
        android:layout_below="@+id/btnCalcular"
        android:layout_alignRight="@+id/btnCalcular"
        android:layout_alignEnd="@id/btnCalcular"/>

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_clear"
        android:layout_alignStart="@+id/inputPercentaje"
        android:layout_alignLeft="@+id/inputPercentaje"
        android:layout_alignEnd="@+id/btnDecrease"
        android:layout_alignRight="@+id/btnDecrease"
        android:layout_below="@+id/inputPercentaje"
        android:layout_margin="@dimen/margin_default"/>

    <View
        android:id="@+id/separator"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_default"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/btnClear"
        android:layout_alignStart="@+id/inputPercentaje"
        android:layout_alignLeft="@+id/inputPercentaje"
        android:layout_alignEnd="@+id/btnDecrease"
        android:layout_alignRight="@+id/btnDecrease" />

    <TextView
        android:id="@+id/txtTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/separator"
        android:visibility="gone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

</RelativeLayout>